--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 				<div class="row container" class="offset-top-50">
 					<h2 class="header projects-header">PROJECTS</h2>
 					<span class="temp-text">(Made more projects, will update soon as I get time)</span>
-				  	<div class="col s6 offset-s3 flex-col">
+				  	<div class="col s8 m6 l6 offset-m3 offset-l3 offset s-2 flex-col">
 						<img src="images/pgh_c.png" class="circular-exp-img">
 						<h5 class="about-sub-heading">Palm Grove Heights</h5>
 						<h6 class="exp-time">April 2014</h6>
