spell errors corrected

--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
 
 				<div class="row container" class="offset-top-50">
 					<h2 class="header projects-header">PROJECTS</h2>
-					<span class="temp-text">(Made more projects, will update soon as I get time)</span>
+					<span class="temp-text">(Built more projects, will update soon as I get time)</span>
 				  	<div class="col s8 m6 l6 offset-m3 offset-l3 offset-s2 flex-col">
 						<img src="images/pgh_c.png" class="circular-exp-img">
 						<h5 class="about-sub-heading">Palm Grove Heights</h5>
 						<h6 class="exp-time">April 2014</h6>
 						<div class="about-sub-desription">
 							<p class="exp-para">
-								I developerd a web application for the sciety Palm Grove Heights in Gurgaon. You can find it <a href="http://www.palmgroveheights.com/" target="_blank">here</a>. My uncle was looking for someone to make it. I was learning back then and decide to take the challenge upon myself.
+								I developed a web application for the sciety Palm Grove Heights in Gurgaon. You can find it <a href="http://www.palmgroveheights.com/" target="_blank">here</a>. My uncle was looking for someone to make it. I was learning back then and decide to take the challenge upon myself.
 							</p>
 						</div>
 					</div>
