--- a/design2.html
+++ b/design2.html
@@ -2,7 +2,7 @@
   <html>
     <head>
 
-      <title>Assingment 2</title>
+      <title>Design 2</title>
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
