--- a/timeline.html
+++ b/timeline.html
@@ -26,7 +26,7 @@
              </p>
            </div>
            <div class="image">
-             <img class="t-sub-heading" src="images/Collaboration-96.png">
+             <img class="t-sub-heading" src="images/t_images/Collaboration-96.png">
            </div>
 
        </div>
@@ -83,7 +83,7 @@
 
          </div>
          <div class="image">
-             <img class="round-t-img" src="images/t_images/code.png">
+             <img class="round-t-img" src="images/t_images/Code.png">
          </div>
 
        </div>
@@ -104,7 +104,7 @@
 
            </div>
          <div class="image">
-            <img class="round-t-img" src="images/t_images/search.png">
+            <img class="round-t-img" src="images/t_images/Search.png">
          </div>
 
        </div>
