gsoc timeline improved

--- a/timeline.html
+++ b/timeline.html
@@ -75,10 +75,10 @@
 
          <div class="text">
 
-           <h6>23 May 2016 - 30 May 2016</h6>
+           <h6>23 May 2016 - 29 May 2016</h6>
            <h6 class="t-sub-heading">Yaya! Finally the coding period starts.</h6>
            <p class="gsoc-para" align="left">
-               Coding period begins! I will be writing the business logic in during the time period. I will write all the models, views during the time.
+               Coding period begins! I plan to write all the forms, models enable search and write Javascript in this time frame.
            </p>
 
          </div>
@@ -96,10 +96,10 @@
 
            <div class="text">
 
-             <h6>1 June 2016 - 7 June 2016</h6>
+             <h6>31 May 2016 - 7 June 2016</h6>
              <h6 class="t-sub-heading">Coding period I</h6>
              <p class="gsoc-para" align="left">
-                 I plan this week to write all the forms, enable search and write Javascript in this time frame.
+                 I will be writing the business logic in during the time period. I will write all the required views during the time and implement AJAX submissions for the forms.
              </p>
 
            </div>
