--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				  <h6 class="exp-time">Nov '15 - Present</h6>
   				  <div class="about-sub-desription">
   					  <p class="exp-para">
-  						  Co-founded the company PosterInfinity, with my friend Kartik. An ecommerce platform developed to sell posters, stickers, decals at highly affordable prices. Working as a full stack engineer, we will be launching the service in January 2016.
+  						  Co-founded the company PosterInfinity, with my friend Kartik. An ecommerce platform developed to sell posters, stickers, decals at highly affordable prices. Working as a full stack developer.
   					  </p>
   				  </div>
   			  </div>
@@ -225,7 +225,7 @@
 						<h6 class="exp-time">April 2014</h6>
 						<div class="about-sub-desription">
 							<p class="exp-para">
-								I developed a web application for the sciety Palm Grove Heights in Gurgaon. You can find it <a href="http://www.palmgroveheights.com/" target="_blank">here</a>. My uncle was looking for someone to make it. I was learning back then and decided to take the challenge upon myself.
+								I developed a web application for the society Palm Grove Heights in Gurgaon. You can find it <a href="http://www.palmgroveheights.com/" target="_blank">here</a>. My uncle was looking for someone to make it. I was learning back then and decided to take the challenge upon myself.
 							</p>
 						</div>
 					</div>
